--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "require-dev": {
         "phpunit/phpunit": "~7.5",
         "scrutinizer/ocular": "~1.5",
-        "php-coveralls/php-coveralls": "~2.0",
+        "php-coveralls/php-coveralls": "~2.0"
     }
 }
